<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/app_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="4dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearConsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_bg"
            android:padding="5dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/enable_suggestion_switch">

            <ImageView
                android:id="@+id/current_location_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:contentDescription="@string/current_location"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:src="@drawable/baseline_my_location_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/location_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/location"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/search_button"
                app:layout_constraintStart_toEndOf="@id/current_location_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:src="@drawable/baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/showing_result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/linearConsLayout"
            tools:text="Showing Weather of: New Delhi" />

        <ImageView
            android:id="@+id/weather_image_view"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/weather_image"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/showing_result_text_view"
            tools:src="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/weather_image_view"
            app:layout_constraintEnd_toEndOf="@+id/weather_image_view"
            app:layout_constraintStart_toStartOf="@+id/weather_image_view"
            app:layout_constraintTop_toTopOf="@+id/weather_image_view" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/weather_image_view"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/degrees_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/weather_image_view"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/weather_icon"
            app:layout_constraintTop_toTopOf="@+id/weather_icon"
            tools:text="Temperature: 12 `C / 48 F" />

        <TextView
            android:id="@+id/weather_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/degrees_text_view"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/degrees_text_view"
            app:layout_constraintTop_toBottomOf="@+id/degrees_text_view"
            tools:text="Cloudy" />


        <Switch
            android:id="@+id/enable_suggestion_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="false"
            android:text="@string/city_suggestion"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/app_heading"
            app:showText="true" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
